--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+form
+{
+  width: 1170px;
+  margin: auto;
+  display: flex;
+  gap: 20px;
+}
+form input
+{
+  height: 40px;
+  flex-basis: 80%;
+
+}
+form button
+{
+  flex-basis: 20%;
+}
