--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,32 @@ form button
 {
   flex-basis: 20%;
 }
+.outerDiv
+{
+  width: 1170px;
+  margin: auto;
+}
+.outerDiv ul
+{
+  margin: 0px;
+  padding: 0px;
+  margin-top: 20px;
+  list-style: none;
+}
+.outerDiv ul li
+{
+  padding: 10px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  position: relative;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.outerDiv ul li span
+{
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+}
